# muxxy

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  main.py  mux.py  pyproject.toml  requirements.txt  shell.nix
.github/copilot/: instructions.md
core/: __init__.py  config.py  engine.py
gui/: __init__.py  app.py  file_browser.py  main_window.py  match_preview.py  settings_dialog.py
modules/: cli.py  constants.py  fonts.py  matcher.py  parsers.py  subtitles.py  tui.py  video.py
muxxy/: cli.py  fonts.py  parsers.py  tui.py
