[project]
name = "muxxy"
version = "2.0.0"
description = "A tool for muxing subtitles, fonts, and attachments into MKV files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Muxxy Contributors"}
]

dependencies = [
    "ass>=0.5.0",
    "PyQt6>=6.4.0",
    "thefuzz>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
muxxy = "main:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["modules", "core", "gui"]
